--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <title>SpringBoot Security</title>
 </head>
 <body>
 <h1>Welcome to Index PAGE!</h1>
-
-<a href="/user" class="ui-button">Login</a>
+<form th:action="@{/login}">
+    <button style="font: bold 16px Arial; color: white; background-color: gray" type="submit" value="Login">Login
+    </button>
+</form>
 </body>
 </html>
