--- a/src/main/resources/templates/user_create.html
+++ b/src/main/resources/templates/user_create.html
@@ -1,56 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create user</title>
 </head>
 <body>
-<form th:action="@{/logout}" method="POST" name="logoutForm"
-      id="logout">
-    <input type="submit" value="Logout">
-</form>
+<div th:insert="~{logout :: topper2}"></div>
 <br>
-<form action="#" th:action="@{/admin/user-create}" th:object="${user}" method="post">
+<form th:action="@{/admin/user-create}" th:object="${user}" method="post">
     <table>
         <tbody>
         <tr>
-            <td>First name:</td>
+            <th style="text-align: left"><label for="firstName">First name: </label></th>
+            <td><input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name"></td>
+        </tr>
+        <tr>
+            <th style="text-align: left"><label for="lastName">Last name:</label></th>
+            <td><input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name"></td>
+        </tr>
+        <tr>
+            <th style="text-align: left"><label for="age">Age:</label></th>
+            <td><input type="number" th:field="*{age}" id="age" placeholder="Age"></td>
+        </tr>
+        <tr>
+            <th style="text-align: left"><label for="email">Email:</label></th>
+            <td><input type="email" th:field="*{email}" id="email" placeholder="Email" autocomplete="off"></td>
+        </tr>
+        <tr>
+            <th style="text-align: left"><label for="password">Password:</label></th>
+            <td><input type="password" th:field="*{password}" id="password" placeholder="Password"></td>
+        </tr>
+        <tr>
+            <th style="text-align: left"><label for="roles">Roles:</label></th>
             <td>
-                <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">
+                <th:block th:each="role: ${roles}">
+                    <input id="roles" type="checkbox" th:field="*{roles}" th:text="${role.getRoleName()}" th:value="${role.id}">
+                </th:block>
             </td>
         </tr>
         <tr>
-            <td>Last name:</td>
-            <td>
-                <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">
-            </td>
-        </tr>
-        <tr>
-            <td>Age:</td>
-            <td>
-                <input type="text" th:field="*{age}" id="age" placeholder="Age">
-            </td>
-        </tr>
-        <tr>
-            <td>Email:</td>
-            <td>
-                <input type="text" th:field="*{email}" id="email" placeholder="Email">
-            </td>
-        </tr>
-        <tr>
-            <td>Password:</td>
-            <td>
-                <input type="text" th:field="*{password}" id="password" placeholder="Password">
-            </td>
-        </tr>
-        <tr>
-            <td align="right" colspan="2">
-                <input type="submit" value="Create User">
+            <td style="text-align: right" colspan="2">
+                <button style="font: bold 16px Arial; color: dodgerblue" type="submit">Create user</button>
             </td>
         </tr>
         </tbody>
     </table>
 </form>
-
 </body>
 </html>
