--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
 </head>
 <body>
-<form th:action="@{/logout}" method="POST" name="logoutForm"
-      id="logout">
-    <input type="submit" value="Logout">
-</form>
-<br>
+<div th:insert="~{logout :: topper}"></div>
 <div th:switch="${users}">
-    <h2 th:case="null">No users found!</h2>
+    <h2 th:case="null">Нет ни одного пользователя!</h2>
     <div th:case="*">
-        <h2>Users</h2>
-        <table th:cellpadding="3">
-            <thead>
+        <table th:cellpadding="10">
+            <thead class="thead-dark">
+            <tr style="align-content: center">
+                <th colspan="8"><h2>Users</h2></th>
+            </tr>
             <tr>
                 <th>Id</th>
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Age</th>
                 <th>Email</th>
+                <th>Role</th>
                 <th colspan="2">Action</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${users}">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.firstName}"></td>
-                <td th:text="${user.lastName}"></td>
-                <td th:text="${user.age}"></td>
-                <td th:text="${user.email}"></td>
-                <td><a th:href="@{user-update/{id}(id=${user.id})}">Edit</a></td>
-                <td><a th:href="@{user-delete/{id}(id=${user.id})}">Delete</a></td>
+            <th:block th:each="user : ${users}">
+                <tr>
+                    <td th:text="*{user.id}"></td>
+                    <td th:text="*{user.firstName}"></td>
+                    <td th:text="*{user.lastName}"></td>
+                    <td th:text="*{user.age}"></td>
+                    <td th:text="*{user.email}"></td>
+                    <td th:text="*{#strings.arrayJoin(user.getRolesName(), ' ')}"></td>
+                    <td>
+                        <form method="get" th:action="@{user-update/{id}(id=${user.id})}">
+                            <button style="font: bold 14px Arial; color: green" type="submit">Edit</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form method="post" th:action="@{user-delete/{id}(id=${user.id})}">
+                            <button style="font: bold 14px Arial; color: red" type="submit">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+            </th:block>
+            <tr>
+                <td colspan="8">
+                    <hr>
+                </td>
+            </tr>
+            <tr style="align-content: center">
+                <td colspan="8" style="text-align: center">
+                    <form method="get" th:action="@{/admin/user-create}">
+                        <button style="font: bold 16px Arial; color: dodgerblue" type="submit">Create user</button>
+                    </form>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
-    <p><a href="/admin/user-create">Create user</a></p>
 </div>
 </body>
 </html>
