--- a/src/main/resources/templates/user_update.html
+++ b/src/main/resources/templates/user_update.html
@@ -7,7 +7,7 @@
 <body>
 <div th:insert="~{logout :: topper2}"></div>
 <br>
-<form th:action="@{/admin/user-update}" th:object="${user}" method="POST">
+<form th:action="@{/admin/user-update}" th:object="${user}" th:method="PATCH">
     <table>
         <tbody>
         <tr>
@@ -53,6 +53,5 @@
         </tbody>
     </table>
 </form>
-
 </body>
 </html>
